# starlab-ar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arguments.py  config.py  cvdnn-test.sln  cvdnn-test.vcxproj  eval_treegan.py  loss.py  main.cpp  main.py  pretrain_treegan.py  registration.py  shape_inversion.py  test.py  trainer.py  util.py
bodymocap/: body_bbox_detector.py  body_bbox_detector_yolo.py  body_mocap_api.py
bodymocap/core/: config.py
bodymocap/models/: __init__.py  hmr_hrnet48.py
bodymocap/utils/: geometry.py  imutils.py
cam/: rs2.py  rs2_test.py  rs2_tum.py
cmpl/: shinv.py  shinv_config.py  shinv_gan.py  shinv_model.py  shinv_reg.py  shinv_util.py
comp3d/: .gitignore  README.md  _init_paths.py  main.py  run.sh  run_dipping.sh  run_pointnet.sh  run_ri.sh  run_shellnet.sh  visualize.py
comp3d/data/: data_utils.py  shapenet.py
comp3d/models/: AtlasNet.py  AtlasNet_RI.py  AtlasNet_ShellNet.py  DippingNet.py  PointNetFCAE.py  ShellNet.py  common.py
comp3d/utils/: focal_loss.py  parse_args.py  train_utils.py
crn_data/: .gitignore
data/: .gitignore  CRN_dataset.py  tum.py
demo/: demo_bodymocap.py  demo_options.py
evaluation/: FPD.py
mocap_utils/: demo_utils.py  geometry_utils.py
physics/: math.py  mesh.py  solver.py
renderer/: meshRenderer.py  obj.py  renderer_pyrd.py  taichi_camera.py  taichi_mesh.py  taichi_renderer.py  taichi_visualizer.py  visualizer.py
seg/: .gitignore  mrcnn.py  mrcnn_test.py
slam/: .gitignore  kf.py
slam/kf/: camera.cu  camera.cuh  frame.cu  frame.cuh  image.cu  image.cuh  kf.cuh  kf_test.cu  (+11 more)
tex_images/: poncho_8K_mat.mtl
utils/: utils.py
vscan/: .gitignore  main.cpp
(+7 files in other folders)
